--- a/docker/nginx-nodejs/node/package.json
+++ b/docker/nginx-nodejs/node/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/chance": "^1.1.3",
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.8",
+    "chance": "^1.1.11",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
