--- a/docker/nginx-nodejs/docker-compose.yml
+++ b/docker/nginx-nodejs/docker-compose.yml
@@ -5,8 +5,11 @@ services:
     restart: always
     build:
       context: ./node
+    volumes:
+      - ./node:/app
     ports:
       - '3000:3000'
+    entrypoint: wait-for db:3306 -t 40 -- docker-entrypoint.sh
     depends_on:
       - db
     networks:
