--- a/docker/nginx-nodejs/node/Dockerfile
+++ b/docker/nginx-nodejs/node/Dockerfile
@@ -1,4 +1,9 @@
-FROM node:16-alpine AS builder
+FROM node:16
+
+RUN apt update && \
+    apt install -y wget netcat-traditional && \
+    wget -q -O /usr/bin/wait-for https://raw.githubusercontent.com/eficode/wait-for/v2.2.3/wait-for && \
+    chmod +x /usr/bin/wait-for
 
 WORKDIR /app
 
