FC-ELK-001 - Adding metricbeat

--- a/elastic-stack/docker-compose.yml
+++ b/elastic-stack/docker-compose.yml
@@ -25,7 +25,6 @@ services:
       - ./elasticsearch_data:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-      - 9300:9300
     networks: 
         - observability
    
@@ -39,6 +38,17 @@ services:
       ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]'
     networks: 
         - observability
+  
+  metricbeat:
+    image: docker.elastic.co/beats/metricbeat:7.13.0
+    container_name: metricbeat
+    user: root
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./beats/metric/metricbeat.yml:/usr/share/metricbeat/metricbeat.yml
+    restart: on-failure
+    networks:
+      - observability
 
 networks:
   observability:
