--- a/elastic-stack/docker-compose.yml
+++ b/elastic-stack/docker-compose.yml
@@ -49,6 +49,27 @@ services:
     restart: on-failure
     networks:
       - observability
+  
+  heartbeat:
+    image: docker.elastic.co/beats/heartbeat:7.13.0
+    container_name: heartbeat 
+    volumes:
+    - ./beats/heartbeat/heartbeat.yml:/usr/share/heartbeat/heartbeat.yml
+    environment:
+      - setup.kibana.host=kibana:5601
+    networks:
+      - observability
+
+  apm:
+    image: docker.elastic.co/apm/apm-server-oss:7.13.0
+    container_name: apm 
+    volumes:
+    - ./apm/apm-server.yml:/usr/share/apm-server/apm-server.yml
+    ports:
+      - "8200:8200"
+    restart: on-failure
+    networks:
+      - observability
 
 networks:
   observability:
