--- a/bonus/codepix-project/codepix/docker-compose.yaml
+++ b/bonus/codepix-project/codepix/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     restart: always
     tty: true
     volumes:
-      - .pgdata:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
     environment:
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=codepix
@@ -32,3 +32,6 @@ services:
       - "9000:80"
     depends_on:
       - db
+
+volumes:
+  data: {}
