--- a/hexagonal-architecture/Dockerfile
+++ b/hexagonal-architecture/Dockerfile
@@ -1,10 +1,9 @@
-FROM golang:1.16
+FROM golang:1.19
 
 WORKDIR /go/src
 ENV PATH="/go/bin:${PATH}"
 
-RUN go get -u github.com/spf13/cobra@latest && \
-    go install github.com/golang/mock/mockgen@v1.5.0 && \
+RUN go install github.com/golang/mock/mockgen@v1.5.0 && \
     go install github.com/spf13/cobra-cli@latest
 
 
